refactor: improve memory management and simplify image processing routines
- Added proper release of OpenCV `Mat` and related resources to prevent memory leaks.
- Simplified and optimized image transformation logic.
- Unified various manual raster and binary image processing methods.